Thu May 17 16:02:14 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/LargeSample/LargeSample.mpc:
        * tests/DCPS/LargeSample/publisher.cpp:
        * tests/DCPS/LargeSample/subscriber.cpp:
        * tests/DCPS/Messenger/Messenger.mpc:
        * tests/DCPS/Messenger/publisher.cpp:
        * tests/DCPS/Messenger/subscriber.cpp:
        * tests/DCPS/SharedTransport/SharedTransport.mpc:
        * tests/DCPS/SharedTransport/TestCase.cpp:
        * tests/transport/simple/DDS_transport_simple.mpc:
        * tests/transport/simple/pub_main.cpp:
        * tests/transport/simple/sub_main.cpp:

          Allow tests that used shared memory to link to static lib.

Thu May 17 15:41:01 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/shmem/ShmemSendStrategy.cpp:
        * dds/DCPS/transport/shmem/ShmemTransport.cpp:

          Fixed compile errors on WinCE.

Thu May 17 15:13:56 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/shmem/ShmemDataLink.h:

          Allow for non-Win32 platforms that are ACE_LACKS_SYSV_SHMEM
          and ACE_HAS_POSIX_SEM (VxWorks).

Thu May 17 15:02:31 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/shmem/ShmemSendStrategy.cpp:
        * dds/DCPS/transport/shmem/ShmemTransport.cpp:

          Fixed compile errors on non-Win32 platforms that do not have
          support for POSIX semaphores (tested with Android, may also
          fix VxWorks).

Thu May 17 07:57:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Add DDS4CCM with OpenDDS

Thu May 17 07:45:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:
        * dds/dcps_bits_source.mpb:
          Fixed problem when built_in_topics feature is disabled

Wed May 16 23:26:15 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/FooTest5_0/run_test.pl:

          Fixed typo.

Wed May 16 23:17:09 UTC 2012  Adam Mitz  <mitza@ociweb.com>
